# Shipr

./: .gitignore  Cargo.toml  README.md
src/: app_errors.rs  app_types.rs  lib.rs  main.rs
src/app/: mod.rs
src/app/controllers/: mod.rs  signin.rs  signup.rs
src/app/db/: mod.rs
src/app/middlewares/: is_logged_in.rs  mod.rs
src/app/migrations/: 0001_init.sql
src/app/models/: mod.rs
src/app/webhooks/: github_installation.rs  mod.rs
src/config/: mod.rs  project_default_config.rs
src/controller/: mod.rs
src/controller/api/: github.rs  logs.rs  mod.rs  vm_request_proxy.rs
src/controller/cli/: cli.rs  deploy.rs  listen.rs  listen_deploy.rs  listen_redeploy.rs  mod.rs  serve.rs
src/controller/dispatcher/: job_dispatcher.rs
src/controller/handlers/: deploy.rs  github.rs  kill_vm.rs  logs.rs  redeployment_completed.rs
src/controller/queue/: build_queue.rs  deploy_queue.rs  lapin.rs  mod.rs  pull_queue.rs  redeploy_queue.rs
src/controller/scheduler/: job_dispatcher.rs  mod.rs
src/controller/storage/: redis.rs  s3.rs
src/controller/vm/: firecracker.rs  heartbeat_store.rs  id_allocator.rs  mod.rs  vm_pool.rs
src/core/: app_types.rs  mod.rs
src/core/config/: app_config.rs  mod.rs  project_default_config.rs
src/core/infra/: detect.rs  kill_vm.rs  mod.rs
src/infra/: detect.rs  kill_vm.rs  mod.rs  process.rs
src/services/: build_queue.rs  lapin.rs  mod.rs
src/services/cli/: cli.rs
src/services/core/: mod.rs  (+4 more)
src/shared/: github_app.rs  mod.rs
src/utils/: detect_project_type.rs  mod.rs  run_script.rs
src/worker/: mod.rs  pull_build.rs
(+54 files in other folders)
