[package]
name = "shipr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
lapin = "4.4.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
futures = "0.3.32"
url = "2.5.8"
reqwest = { version = "0.13.2", features = ["json"] }
clap = {version = "4.6.0", features=["derive"]}
actix-web = "4.13.0"