[package]
name = "shipr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
lapin = "4.4.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
futures = "0.3.32"
url = "2.5.8"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
clap = {version = "4.6.0", features=["derive"]}
actix-web = "4.13.0"
aws-config = "1.8.16"
aws-sdk-s3 = "1.131.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
redis = {version = "1.2.1", features = ["tokio-comp", "tokio-rustls-comp"]}
tokio-stream = "0.1.18"
async-stream = "0.3.6"
futures-util = "0.3.32"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.99"
bcrypt = "0.19.1"
dotenv = "0.15.0"
validator = { version = "0.20.0", features = ["derive"] }